...
              // blurOnSubmit={true}
              // onSubmitEditing={() => Keyboard.dismiss()}
              // returnKeyType="done"
            />
          </FormControl>
        </Box>
        <Button onPress={() => addCall(call)}>Save</Button>
        <Button onPress={() => deleteAllCalls()}>Delete All Calls</Button>
      </Pressable>
    </View>
  );
};

...
