import { View, Text, FlatList } from "react-native";
import moment from "moment";
import { FontAwesome } from "@expo/vector-icons";
import theme from "../../constants/theme";

const Month = ({ month }: { month: number }) => {
  const currentMonth = moment().month() === month;

  return (
    <View
      style={{
        gap: 5,
...
