...
  const minutes = Math.floor(ms / 60000) % 60
  const hours = Math.floor(ms / 3600000)
  const notEnoughTimeToSave = minutes < 5

  const handleSave = () => {
    reset()
    navigation.navigate('Add Time', {
      minutes,
      hours,
    })
  }

  const handleHide = () => {
...
